--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <!-- #region HEADER-->
     <header>
         <nav>
-            <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+            <a class="logo" href="./index.html">Web<span class="logo-header">Studio</span></a>
             <ul>
-                <li><a href="" class="nav-link">Studio</a></li>
+                <li><a href="./index.html" class="nav-link">Studio</a></li>
                 <li><a href="" class="nav-link">Portfolio</a></li>
                 <li><a href="" class="nav-link">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="contacts">
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com" class="addr-link">info@devstudio.com</a>
@@ -42,34 +42,37 @@
     <main>
         <!-- #region HERO -->
         <section class="hero">
-            <h1>Effective Solutions
+            <h1 class="hero-title">Effective Solutions
                 for Your Business</h1>
             <button class="hero-btn" type="button">Order Service</button>
         </section>
         <!-- #endregion -->
 
         <!-- #region BENEFITS -->
-        <section>
+        <section class="benefits">
             <h2 hidden>Benefits</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <h3 class="benefits-title">Strategy</h3>
+                    <p class="benefits-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="benefits-title">Punctuality</h3>
+                    <p class="benefits-text">Bring the key message to the brand's audience for the best price within the
+                        shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                    <h3 class="benefits-title">Diligence</h3>
+                    <p class="benefits-text">Research and confirm brands with the strongest digital growth opportunities
+                        and minimize risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="benefits-title">Technologies</h3>
+                    <p class="benefits-text">Design practice focused on digital experiences. We bring forth a deep
+                        passion for
                         problem-solving.</p>
                 </li>
             </ul>
@@ -78,24 +81,24 @@
 
         <!-- #region TEAM -->
         <section class="team">
-            <h2>Our Team</h2>
+            <h2 class="second-title">Our Team</h2>
             <ul>
-                <li>
+                <li class="team-card">
                     <img src="./images/team/img-01.jpg" alt="Mark Guerrero photo" width="264" height="260">
                     <h3 class="team-title">Mark Guerrero</h3>
                     <p class="team-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/team/img-02.jpg" alt="Tom Ford photo" width="264" height="260">
                     <h3 class="team-title">Tom Ford</h3>
                     <p class="team-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/team/img-03.jpg" alt="Camila Garcia photo" width="264" height="260">
                     <h3 class="team-title">Camila Garcia</h3>
                     <p class="team-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/team/img-04.jpg" alt="Daniel Wilson photo" width="264" height="260">
                     <h3 class="team-title">Daniel Wilson</h3>
                     <p class="team-text">UI Designer</p>
@@ -105,38 +108,38 @@
         <!-- #endregion -->
 
         <!-- #region PORTFOLIO -->
-        <section>
-            <h2>Our Portfolio</h2>
+        <section class="portfolio">
+            <h2 class="second-title">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/portfolio/img-01.jpg" alt="Banking App photo" width="360" height="300">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-title">Banking App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-02.jpg" alt="Cashless Payment photo" width="360" height="300">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-title">Cashless Payment</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-03.jpg" alt="Meditation App photo" width="360" height="300">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-title">Meditation App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-04.jpg" alt="Taxi Service photo" width="360" height="300">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-title">Taxi Service</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-05.jpg" alt="Screen Illustrations photo" width="360" height="300">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="portfolio-title">Screen Illustrations</h3>
+                    <p class="portfolio-text">Design</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-06.jpg" alt="Online Courses photo" width="360" height="300">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-title">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
             </ul>
         </section>
@@ -145,8 +148,9 @@
 
     <!-- #region FOOTER-->
     <footer class="lower">
-        <a class="logo last" href="./index.html"><span>Web</span>Studio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a class="logo" href="./index.html">Web<span class="logo-lower">Studio</span></a>
+        <p class="lower-text">Increase the flow of customers and sales for your business with digital marketing & growth
+            solutions.</p>
     </footer>
     <!-- #endregion -->
 </body>
